Fix scroll behaviour and add custom scrollbar

--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
+    scroll-behavior: smooth;
 }
 
 body{
    font-size: 40px;
    background-image: url(images/background2.jpg);
-   background-repeat: round;
+   background-repeat: roundcd ;
 }
 
 .top-bar{
@@ -185,3 +185,27 @@ body{
     text-align: center;
     color: aliceblue;
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+    
+  }
+  
+  
+  ::-webkit-scrollbar-track {
+    background: aliceblue;
+    
+
+  }
+  
+  
+  ::-webkit-scrollbar-thumb {
+    background: rgb(0, 88, 62);
+    border-radius: 10px;
+    
+  }
+  
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
